Fixed white space issue in city input and update font to Roboto Condensed

--- a/weather.css
+++ b/weather.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-  font-family: "Edu NSW ACT Cursive", cursive;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
   color: black;
   padding: 5px;
@@ -38,7 +38,7 @@ h1 {
     gap: 10px;
 }
 button {
-  font-family: "Edu NSW ACT Cursive", cursive;
+  font-family:"Roboto Condensed", sans-serif;
   background-color: rgb(255, 140, 0);
   color: black;
   border: none;
@@ -54,7 +54,7 @@ button:hover {
 }
 
 #weatherresult {
-  font-family: "Dancing Script", cursive;
+  font-family:"Roboto Condensed", sans-serif;
   font-size: 1.5rem;
   color: rgb(32, 31, 30);
   margin-top: 20px;
